Create CarController class with getCar and createCar methods. Add postman json file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:h2:mem:testdb2
+spring.datasource.username=test
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create
+spring.h2.console.enabled=true
+server.port=8080
